src/test/deca/context/valid/Obj/decl-class.deca
// Description:
//    Déclaration d'une classe sans attribut ni méthode
//
// Résultat:
//    Succès
//
class A {}
{}