src/test/deca/context/invalid/Obj/decl-class-dejadecl.deca
// Description:
//    Déclaration d'une classe qui a déjà été déclarée
//
// Résultat:
//Une autre classe du même nom a déjà été définie
//
class A {}
class A {}
{}